--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <p>
-<img src="REVISED TERM-1 DATE SHEET(BOYS' SECTION).jpg">
+<img src="TERM-1 TIMETABLE-2023 GIRLS' SECTION).jpg">
 </P>
 </body>
 </html>
